<resources>

    <string name="app_name">Hotel Advisor (HO)</string>
    <string name="hoteladvisor">HotelAdvisor(HO)</string>
    <string name="welcom">As a hotel owner,market your hotel information and details to potential clients and customers</string>
    <string name="next">Continue</string>
    <string name="phone_number">Phone number</string>
    <string name="_0790384696">0790384696</string>
    <string name="password">Password</string>
    <string name="create_a_new_hoteladvisor_account">Create a new HotelAdvisor account</string>
    <string name="sign_in">SignIn</string>
    <string name="already_have_an_account_signin">Already have an account,signIn.</string>
    <string name="sign_up">SignUp</string>
    <string name="name">Name</string>
    <string name="book_better_tour_better">Market better.Earn better.Enjoy</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="forgot_pwd"><u>Forgot Password?</u></string>
    <string name="title_activity_maps">Map</string>

    <string name="tip_1">This is Hotel Advisor tip 1 This is Hotel Advisor tip 1 This is Hotel Advisor tip 1</string>
    <string name="tip_2">This is Hotel Advisor tip 1</string>
    <string name="tip_3">This is Hotel Advisor tip 1</string>
    <string name="tip_4">This is Hotel Advisor tip 1</string>
    <string name="tip_5">This is Hotel Advisor tip 1</string>
    <string name="tip_6">This is Hotel Advisor tip 1</string>
    <string name="tip_7">This is Hotel Advisor tip 1</string>
    <string name="tip_8">This is Hotel Advisor tip 1</string>
    <string name="tip_9">This is Hotel Advisor tip 1</string>
    <string name="tip_10">This is Hotel Advisor tip 1</string>

</resources>
