<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbackground"
    tools:context="dev.marshall.hoteladvisor.SignIn">
    <TextView
        android:drawableStart="@drawable/ic_hotel_black_24dp"
        android:layout_width="wrap_content"
        android:drawableTint="@color/colorPrimaryDark"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/hA"
        android:text="@string/hoteladvisor"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"
        />
    <TextView
        app:layout_constraintTop_toBottomOf="@+id/hA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/wlk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_better_tour_better"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginStart="50dp"
        />


    <android.support.v7.widget.CardView
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="10dp"
        android:id="@+id/cardview"
        app:layout_constraintTop_toBottomOf="@+id/wlk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/Edphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="10"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="true" />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/Edpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/Edphone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="10"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="true" />

            <com.rey.material.widget.CheckBox
                android:id="@+id/chbRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Material.Drawable.CheckBox"
                android:text="Remember me"
                app:layout_constraintTop_toBottomOf="@+id/Edpassword"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="center_vertical"
                android:textColor="@android:color/black"
                app:cbd_strokeColor="@android:color/black"
                app:cbd_tickColor="@color/colorPrimaryDark"
                />
            <TextView
                android:id="@+id/forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pwd"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/Edpassword"
                app:layout_constraintStart_toEndOf="@+id/chbRemember"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="14sp" />

            <Button
                android:textAllCaps="false"
                android:layout_alignParentEnd="true"
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:text="@string/sign_in"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@+id/forgot"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="18sp"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <info.hoang8f.widget.FButton
        android:textColor="@android:color/white"
        android:id="@+id/btSigUp"
        android:text="@string/create_a_new_hoteladvisor_account"
        app:shadowEnabled="false"
        app:layout_constraintTop_toBottomOf="@+id/cardview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:fButtonColor="@color/colorPrimary"
        android:layout_marginTop="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</android.support.constraint.ConstraintLayout>
